--- a/InceptoAI--Frontend-React/package.json
+++ b/InceptoAI--Frontend-React/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --emptyOutDir",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -20,9 +20,6 @@
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1"
   },
-  "optionalDependencies": {
-      "@rollup/rollup-linux-x64-gnu": "^4.32.0"
-  },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
@@ -32,13 +29,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5",
-    "terser": "^5.21.0"
-  },
-  "overrides": {
-    "rollup": "^3.29.4"
-  },
-  "resolutions": {
-    "rollup": "^3.29.4"
+    "vite": "^5.2.0"
   }
 }
